fixing dropdown not collapsing

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2941,10 +2941,6 @@ body {
 .white {
   background-color: #fff; }
 
-.fsafsafasfa {
- background-color: #154a84;
-}
-
 .dark-white {
   color: rgba(0, 0, 0, 0.87);
   background-color: #fff; }
